fixed contrast errors

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -176,9 +176,9 @@
 
 .purchase-complete-section p {
     font-size: 1.4em;
-    font-weight: 400;
-    color: #801889;
-    width: 330px;
+    font-weight: 300;
+    color: #db21cc;
+    width: 300px;
     margin: auto;
 }
 
