--- a/css/global.css
+++ b/css/global.css
@@ -139,7 +139,7 @@ html, body {
     background: linear-gradient(45deg, #db21cc 0%, #130a7d 100%);
   }
   .accent {
-    background-color: #db21cc;
+    background-color: #801889;
   }
 
   .button-width {
